[gd_scene load_steps=22 format=3 uid="uid://nsukmw4byu08"]

[ext_resource type="Script" path="res://scenes/game_object/bat_enemy/bat_enemy.gd" id="1_fya3m"]
[ext_resource type="PackedScene" uid="uid://bef0a6noarn5v" path="res://scenes/components/health_component.tscn" id="2_llhct"]
[ext_resource type="PackedScene" uid="uid://0yg65mjxusfo" path="res://scenes/components/velocity_component.tscn" id="3_rhb37"]
[ext_resource type="PackedScene" uid="uid://b1cvp3shxcfum" path="res://scenes/components/vial_drop_component.tscn" id="4_ln42k"]
[ext_resource type="PackedScene" uid="uid://c0qf785jxsxla" path="res://scenes/components/hit_flash_component.tscn" id="5_c6vry"]
[ext_resource type="Shader" path="res://scenes/components/hit_flash_component.gdshader" id="6_25pct"]
[ext_resource type="PackedScene" uid="uid://cuujsglpghd32" path="res://scenes/components/death_component.tscn" id="7_ef3y5"]
[ext_resource type="PackedScene" uid="uid://co5b0m5dwrwmo" path="res://scenes/components/random_audio_stream_player_2d_component.tscn" id="8_06lk7"]
[ext_resource type="AudioStream" uid="uid://c2aghrrp0gvae" path="res://assets/audio/footstep_carpet_000.ogg" id="9_lgd3w"]
[ext_resource type="AudioStream" uid="uid://b513q7gt0x4hq" path="res://assets/audio/footstep_carpet_001.ogg" id="10_tj7hi"]
[ext_resource type="AudioStream" uid="uid://bb00why3nmm5w" path="res://assets/audio/footstep_carpet_002.ogg" id="11_yieod"]
[ext_resource type="AudioStream" uid="uid://bosxs2dtxw3ys" path="res://assets/audio/footstep_carpet_003.ogg" id="12_nnn6u"]
[ext_resource type="AudioStream" uid="uid://c5dbl8i4wwhce" path="res://assets/audio/footstep_carpet_004.ogg" id="13_1srog"]
[ext_resource type="Texture2D" uid="uid://rf7dvh8uu3i7" path="res://scenes/game_object/bat_enemy/bat.png" id="14_6off2"]
[ext_resource type="Script" path="res://scenes/components/hurt_box_component.gd" id="15_4hsmn"]

[sub_resource type="Animation" id="Animation_twleu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_o7ccb"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(2.63, 1),
"update": 0,
"values": [Vector2(0, -7), Vector2(0, -11)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hr2pe"]
_data = {
"RESET": SubResource("Animation_twleu"),
"walk": SubResource("Animation_o7ccb")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fs02g"]
resource_local_to_scene = true
shader = ExtResource("6_25pct")
shader_parameter/lerp_percent = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_36fgx"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_le0se"]
radius = 4.0

[node name="BatEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 9
script = ExtResource("1_fya3m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hr2pe")
}
autoplay = "walk"

[node name="HealthComponent" parent="." instance=ExtResource("2_llhct")]
max_health = 30.0

[node name="VelocityComponent" parent="." instance=ExtResource("3_rhb37")]
max_speed = 110.0
acceleration = 0.75

[node name="VialDropComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_ln42k")]
drop_percent = 0.4
health_component = NodePath("../HealthComponent")

[node name="HitFlashComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("5_c6vry")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")
hit_flash_material = SubResource("ShaderMaterial_fs02g")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("7_ef3y5")]
health_component = NodePath("../HealthComponent")
sprite = NodePath("../Visuals/Sprite2D")

[node name="HitRandomAudioPlayerComponent" parent="." instance=ExtResource("8_06lk7")]
unique_name_in_owner = true
streams = Array[AudioStream]([ExtResource("9_lgd3w"), ExtResource("10_tj7hi"), ExtResource("11_yieod"), ExtResource("12_nnn6u"), ExtResource("13_1srog")])

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("14_6off2")

[node name="HurtBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
position = Vector2(0, -6)
collision_layer = 0
collision_mask = 4
script = ExtResource("15_4hsmn")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_36fgx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_le0se")
